jobs page: fix overflow gradient color for jobs with bid

--- a/css/jobs.css
+++ b/css/jobs.css
@@ -347,7 +347,7 @@ td.textAlignReport {
 }
 
 /* jobs with bid rows background */
-.table-striped > tbody > tr.rowbidon: > td:nth-child(n+2) {
+.table-striped > tbody > tr.rowbidon > td:nth-child(n+2) {
     background-color: #99e566;
 }
 
